--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -40,14 +40,8 @@ jobs:
           Write-Output "File to upload: $target"
 
           echo "::set-output name=target::$target"
-
-      - name: Upload rmskin
-        id: upload_rmskin
-        uses: actions/upload-release-asset@v1.0.1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Upload rmskin file
+        uses: actions/upload-artifact@v2
         with:
-          upload_url: ${{ github.event.release.upload_url }}
-          asset_name: ${{ steps.create_rmskin.outputs.target }}
-          asset_path: ${{ steps.create_rmskin.outputs.target }}
-          asset_content_type: application/octet-stream
+          name: clockan
+          path: $target
