--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -40,8 +40,8 @@ jobs:
           Write-Output "File to upload: $target"
 
           echo "::set-output name=target::$target"
-        - name: Upload rmskin file
-          uses: actions/upload-artifact@v2
-          with:
-            name: clockan
-            path: $target
+      - name: Upload rmskin file
+        uses: actions/upload-artifact@v2
+        with:
+          name: clockan
+          path: ${{ steps.create_rmskin.outputs.target }}
