--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -51,5 +51,5 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          body: "The artifact URL is: \`${{ steps.upload-rmskin-file.outputs.artifact_url }}\`"
+          body: "The artifact URL is: \\`${{ steps.upload-rmskin-file.outputs.artifact_url }}\\`"
           issue_number: ${{ github.event.release.release_id }}
