--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -52,4 +52,4 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           body: "The artifact URL is: \\`${{ steps.upload-rmskin-file.outputs.artifact_url }}\\`"
-          issue_number: "$(date +%m-%d)-$(date +%s)"
+          issue-number: "$(date +%m-%d)-$(date +%s)"
