--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -46,8 +46,6 @@ jobs:
       - name: Upload rmskin file as release asset
         uses: softprops/action-gh-release@v1
         if: startsWith(github.event.ref, 'refs/tags/')
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          # upload_url: ${{ steps.create_release.outputs.upload_url }}
           files: ${{ steps.create_rmskin.outputs.target }}
