--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -40,8 +40,8 @@ jobs:
         with:
           name: clockan
           path: ${{ steps.create_rmskin.outputs.target }}
-      - name: Echo artifact download link
-        run: echo "The artifact download link is: https://github.com/${{ github.repository }}/actions/artifacts/download/clockan/${{ steps.upload-rmskin-file.outputs.artifact_url }}"
+      # - name: Echo artifact download link
+      #   run: echo "The artifact download link is: https://github.com/${{ github.repository }}/actions/artifacts/download/clockan/${{ steps.upload-rmskin-file.outputs.artifact_url }}"
       - name: Create a new GitHub Discussion
         id: create-discussion
         uses: abirismyname/create-discussion@v1.x
