--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -35,6 +35,7 @@ jobs:
           $target = $target.Replace(".zip", ".rmskin")
           Write-Output "File to upload: $target"
           echo "::set-output name=target::$target"
+          echo "this does not work. You probably should get rid of this at some point."
       - name: Upload rmskin file
         uses: actions/upload-artifact@v2
         with:
